Extraction of duplicated code to reusable functions between modes, stylsheet response

--- a/content/index.html
+++ b/content/index.html
@@ -2,15 +2,16 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 	<title>Programación en Redes - Trabajo Práctico</title>
 </head>
 <body>
 	<div>
-		<h1>Programación en Redes</h1>
-		<h2>Trabajo Práctico - Nicolás Forlano</h2>
-	</div>
-	<div>
-		<img src="/image.jpg">
+		<center>
+			<h1>Programación en Redes</h1>
+			<h2>Trabajo Práctico - Nicolás Forlano</h2>
+			<img src="/image.jpg">
+		</center>
 	</div>
 </body>
 </html>
