Free allocted resource

--- a/content/not-found.html
+++ b/content/not-found.html
@@ -6,8 +6,10 @@
 </head>
 <body>
 	<div>
-		<h1>404 NOT FOUND</h1>
-		<h2>El recurso buscado no fue hallado.</h2>
+		<center>
+			<h1>404 NOT FOUND</h1>
+			<h2>El recurso buscado no fue hallado.</h2>
+		</center>
 	</div>
 </body>
 </html>
